<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".DonationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buymeacoffeeFullText"
                android:fontFamily="@font/andika"
                android:textSize="15sp"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_developer_s_desk"
                android:fontFamily="@font/andika"
                android:textSize="13sp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="6dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:gravity="end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_love"
                android:fontFamily="@font/andika"
                android:textSize="18sp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="start"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:padding="10dp"
                    android:layout_marginVertical="3dp"
                    android:background="@drawable/result_box_background">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.85"
                        android:src="@drawable/doante_chocolate"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chocolate"
                        android:fontFamily="@font/andika"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/chocolateDonate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.8"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/andika"
                        android:gravity="center"
                        android:text="@string/donate_10"
                        android:paddingVertical="9dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:cornerRadius="6dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:padding="10dp"
                    android:layout_marginVertical="3dp"
                    android:background="@drawable/result_box_background">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.85"
                        android:src="@drawable/donate_coffee"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coffee"
                        android:fontFamily="@font/andika"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/coffeeDonate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.8"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/andika"
                        android:gravity="center"
                        android:text="@string/donate_30"
                        android:paddingVertical="9dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:cornerRadius="6dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:padding="10dp"
                    android:layout_marginVertical="3dp"
                    android:background="@drawable/result_box_background">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.85"
                        android:src="@drawable/donate_burger"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/burger"
                        android:fontFamily="@font/andika"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/burgerDonate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.8"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/andika"
                        android:gravity="center"
                        android:text="@string/donate_50"
                        android:paddingVertical="9dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:cornerRadius="6dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:padding="10dp"
                    android:layout_marginVertical="3dp"
                    android:background="@drawable/result_box_background">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.85"
                        android:src="@drawable/donate_meal"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meal"
                        android:fontFamily="@font/andika"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/mealDonate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.8"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="@font/andika"
                        android:gravity="center"
                        android:text="@string/donate_120"
                        android:paddingVertical="9dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:cornerRadius="6dp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/made_in_india_made_with_love"
                android:fontFamily="@font/andika"
                android:textColor="#808080"
                android:textSize="15sp"
                android:layout_marginVertical="48dp"
                android:paddingBottom="8dp"
                android:textStyle="italic"
                android:layout_gravity="bottom"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>






</LinearLayout>